major upd, added init-sql DB, optimized docker-compose.yml